tests/lifetime/reborrow/reborrow_precondition_errors.err.expected
error: at 53:5: [TC-DowncastOfNonEnum] In function 'downcast_before_deref_parse_error', block 'v_arm': Cannot downcast non-enum type &mut 's0 E
    |
 52 |   v_arm:
 53 |     r = &mut e as V .*;
    |     ^^^^^^^^^^^^^^^^^^
 54 |     return
    |
error: at 27:5: [INIT-BorrowStateMismatch] In function 'mut_reborrow_of_out_parent', block 'entry': cannot create &mut of '*r': pointee must be initialized at borrow, but is uninitialized
    |
 26 |   entry:
 27 |     s = &mut r.*;
    |     ^^^^^^^^^^^^
 28 |     return
    |
error: at 36:5: [INIT-BorrowStateMismatch] In function 'out_reborrow_of_mut_parent', block 'entry': cannot create &out of '*r': pointee must be uninitialized at borrow, but is initialized
    |
 35 |   entry:
 36 |     s = &out r.*;
    |     ^^^^^^^^^^^^
 37 |     s.* = 1;
    |
error: at 53:5: [INIT-ReferenceStateUnknown] In function 'downcast_before_deref_parse_error', block 'v_arm': cannot create &mut of '*e as V': parent reference 'e as V' is not bound here
    |
 52 |   v_arm:
 53 |     r = &mut e as V .*;
    |     ^^^^^^^^^^^^^^^^^^
 54 |     return
    |
